--- a/ubuntu-cmake-doxygen-git/Dockerfile
+++ b/ubuntu-cmake-doxygen-git/Dockerfile
@@ -1,3 +1,3 @@
 FROM ubuntu:16.04
 RUN apt-get update
-RUN apt-get install -q -y cmake doxygen git
+RUN apt-get install -q -y build-essential cmake doxygen git
